cmake_minimum_required(VERSION 3.5)

set(CMAKE_CXX_STANDARD 17)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

project(homog2d)

include(GNUInstallDirs)

set (INSTALLABLE_HEADERS
	"homog2d.hpp")

set (INSTALLABLE_DOCFILES
  "README.md"
  "LICENCE")

add_library(${PROJECT_NAME} INTERFACE ${INSTALLABLE_HEADERS})

INSTALL(FILES ${INSTALLABLE_HEADERS} DESTINATION ${CMAKE_INSTALL_INCLUDEDIR})
INSTALL(FILES ${INSTALLABLE_DOCFILES} DESTINATION ${CMAKE_INSTALL_DOCDIR}/homog2d)
